--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -130,6 +130,10 @@ div.viewer {
         margin: 50px 0 0 20px;
 
         ul.tabs {
+            display: inline-block;
+            width: 300px;
+            float: left;
+
             li {
                 list-style: none;
                 display: inline-block;
@@ -171,6 +175,14 @@ div.viewer {
                 border-right: 1px solid #ddd;
                 border-top: 1px solid #e9e9e9;
             }
+        }
+
+        a.leave-room {
+            padding: 6px 19px 5px 10px;
+            float: right;
+            color: #333;
+            text-decoration: none;
+            background: url("../images/leave.png") no-repeat 46px;
         }
 
         div.tab-content {
