--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -90,6 +90,20 @@ div.viewer {
             border-bottom: 1px solid #ddd;
             cursor: pointer;
             margin-bottom: 2px;
+
+            div.notify {
+                float: right;
+                padding-right: 2px;
+                font-weight: bold;
+                color: #f67900;
+                display: none;
+            }
+        }
+
+        div.room.new-messages {
+            div.notify {
+                display: block;
+            }
         }
 
         div.room.active {
