--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -613,6 +613,11 @@ div.options-editor {
             }
         }
 
+        div.choice {
+            margin: 5px 0 0 2px;
+            cursor: default;
+        }
+
         input[type="text"] {
             display: inline-block;
             border: none;
@@ -676,4 +681,12 @@ button.white {
 
 button.white:hover {
     background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dcdcdc));
+}
+
+.qtip {
+    label.tooltip {
+        margin-bottom: 5px;
+        font-size: 9pt;
+        font-weight: bold;
+    }
 }
