--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -625,12 +625,12 @@ div.options-editor {
             padding: 5px;
         }
 
-        input[type="text"].account-name {
-            width: 224px;
+        input[name="account-name"] {
+            width: 120px;
             margin: 0 2px;
         }
 
-        input[type="text"].api-token {
+        input[name="api-token"] {
             width: 400px;
         }
     }
