- Added saving of options. - Added error checking to account input.

--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -568,6 +568,8 @@ div.options-editor {
 
         button.save-options {
             float: right;
+            width: 60px;
+            height: 28px;
         }
     }
 
@@ -575,6 +577,16 @@ div.options-editor {
         padding-top: 20px;
         border-top: 3px solid #eee;
         font-size: 12pt;
+
+        div.error {
+            background: url("../images/invalid-account.png") no-repeat 5px 4px;
+            color: #d9353c;
+            border: 1px solid #d9353c;
+            padding: 5px 7px 5px 25px;
+            cursor: default;
+            margin-bottom: 20px;
+            font-size: 9pt;
+        }
 
         fieldset {
             margin-bottom: 20px;
