--- a/Code/styles/happycamper.css
+++ b/Code/styles/happycamper.css
@@ -538,11 +538,22 @@ div.options-editor div.container ul.menu li.notifications a {
 }
 div.options-editor div.container button.save-options {
   float: right;
+  width: 60px;
+  height: 28px;
 }
 div.options-editor div.content {
   padding-top: 20px;
   border-top: 3px solid #eee;
   font-size: 12pt;
+}
+div.options-editor div.content div.error {
+  background: url("../images/invalid-account.png") no-repeat 5px 4px;
+  color: #d9353c;
+  border: 1px solid #d9353c;
+  padding: 5px 7px 5px 25px;
+  cursor: default;
+  margin-bottom: 20px;
+  font-size: 9pt;
 }
 div.options-editor div.content fieldset {
   margin-bottom: 20px;
