--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -117,10 +117,15 @@ div.viewer {
 
         div.room.locked {
             background: #f1f1f1 url("../images/lock.png") no-repeat 6px 8px;
+            cursor: default;
         }
 
         div.room:hover {
             background-color: #eaeaea !important;
+        }
+
+        div.room.locked:hover {
+            background-color: #f1f1f1 !important;
         }
 
         div.room.selected {
